# Aegis-Core

./: .gitignore  LICENSE  README.md  pyproject.toml
aegis_core/: aegis_pb2.py  aegis_pb2_grpc.py  crypto.py
aegis_core/core_a/: __main__.py  main.py
aegis_core/core_b/: __main__.py  main.py
aegis_dashboard/: Dockerfile
aegis_dashboard/backend/: main.py
aegis_dashboard/frontend/: package-lock.json  package.json  tailwind.config.js
aegis_dashboard/frontend/src/: App.jsx  ConfigWizard.jsx  MetricsPanel.jsx  index.css
docs/en/: architecture.md  dashboard.md  mtd_strategy.md  setup.md  technical_specification.md  troubleshooting.md
proto/: aegis.proto
tests/: test_core_a.py  test_core_b.py  test_crypto.py
tests/integration/: e2e_test.py  mock_backend.py  test_overflow.py
